# nonlinear_observer

./: CMakeLists.txt  README.md  package.xml
apps/ros/: ros_node.cpp  ros_node.h
apps/ros/launch/: PC_testing.launch
apps/ros/parameters/: test.yaml
apps/test/: main.cpp
include/nonlinear_observer/: nonlinear_observer.h
src/: CMakeLists.txt  common.cpp  common.h  nonlinear_observer.cpp
